Fix cursor issues on Safari by removing svg version

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-    cursor:  url('/pencil.svg') 0 22,
+    cursor:
       url('/pencil.cur'), default;
   }
   @media (max-width: 767px){
